Fix left-aligned avatars being collapsed to the next line if username/reason is too long
If there is a better way to fix this besides "display: flex" I'll consider it.

--- a/inc/css/custom.css
+++ b/inc/css/custom.css
@@ -4,6 +4,13 @@
     border-radius: 2px;
 }
 
+.avatar-name {
+}
+
+.avatar-name-left {
+    display: flex;
+}
+
 /* header */
 .litebans-header {
     display: block;
